Applying inspection cleanups from IntelliJ